--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+    <Button
+        android:id="@+id/btnMind"
+        android:text="Mindet lekér"
+        android:onClick="onClick"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        />
 
 </LinearLayout>
